# python_project_template

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  ruff.toml  setup.cfg
{{cookiecutter.repo_name}}/src/: hello_world.py
{{cookiecutter.repo_name}}/tests/: test_hello_world.py
